Ajustements en fonction de CompilationMain